Fixed text overlap on aside label in list view.

--- a/css/less/contacts.less
+++ b/css/less/contacts.less
@@ -2,14 +2,8 @@
  * Contacts
  */
 
-#contacts {
-  .contact-list {
-    .list-view;
-  }
-}
-
 .contact-list {
-  margin-bottom: 0px;
+  .list-view;
 }
 
 .filter-menu {
@@ -49,7 +43,8 @@
   .action-list {
     li {
       padding: 0.25em 0px;
-      .role {
+
+      .aside {
         margin-top: 1px;
         margin-right: 1em;
         float: right;
@@ -57,11 +52,5 @@
         color: @grayLight;
       }
     }
-  }
-}
-
-.contact-transactions-page {
-  .transaction-list {
-
   }
 }
