--- a/css/less/events.less
+++ b/css/less/events.less
@@ -27,7 +27,7 @@
         color: inherit;
       }
     }
-    .role {
+    .aside {
       font-size: 0.70em;
       color: @grayLight;
       display: block;
@@ -80,7 +80,7 @@
       a {
         padding-right: 100px;
         
-        .role {
+        .aside {
           position: absolute;
           right: 1em;
         }
@@ -93,7 +93,8 @@
   .action-list {
     li {
       padding: 0.25em 0px;
-      .role {
+
+      .aside {
         margin-top: 1px;
         margin-right: 1em;
         float: right;
